bootstrap/apps/nginx-example/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: nginx-replacepath
  namespace: nginx
spec:
  replacePathRegex:
    regex: ^/nginx-example/(.*)
    replacement: /$1
