bootstrap/apps/nginx-example/ingress-path.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-path
  namespace: nginx
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: 127.0.0.1.nip.io
      http:
        paths:
          - path: /nginx-example(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: nginx-example
                port:
                  number: 80
